--- a/Myassistant/app/src/main/res/menu/navigation.xml
+++ b/Myassistant/app/src/main/res/menu/navigation.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="日程管理" />
+        android:title="@string/日程管理" />
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="闹钟" />
+        android:title="@string/闹钟" />
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="收支管理" />
+        android:title="@string/收支管理" />
 
 </menu>
