--- a/Myassistant/app/src/main/res/layout/activity_main.xml
+++ b/Myassistant/app/src/main/res/layout/activity_main.xml
@@ -8,36 +8,21 @@
     tools:context="com.zucc.hpy31501365gbl31501364.MainActivity"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/content"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/mViewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-    </FrameLayout>
+        android:layout_weight="1"
+        android:layout_height="wrap_content">
+    </android.support.v4.view.ViewPager>
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+        android:id="@+id/mBottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation" />
+        android:layout_height="50dp"
+        app:menu="@menu/navigation"
+        android:background="#CFCFCF"
+        >
+    </android.support.design.widget.BottomNavigationView>
+
 
 </LinearLayout>
