日程页面简单布局
日程页面简单布局

--- a/Myassistant/app/src/main/res/layout/fragment1.xml
+++ b/Myassistant/app/src/main/res/layout/fragment1.xml
@@ -3,9 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="first"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minDate="01/01/2015"
+        android:maxDate="12/31/2025"
+        android:weekSeparatorLineColor="#f2f2f2"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/richeng_List"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
