Json工具类 日程管理主页
Json工具类 日程管理主页实现

--- a/Myassistant/app/src/main/res/layout/fragment1.xml
+++ b/Myassistant/app/src/main/res/layout/fragment1.xml
@@ -3,18 +3,30 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <CalendarView
-        android:id="@+id/calendarView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minDate="01/01/2015"
-        android:maxDate="12/31/2025"
-        android:weekSeparatorLineColor="#f2f2f2"
-        />
+        android:layout_height="wrap_content">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/richeng_List"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <CalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxDate="12/31/2025"
+                android:minDate="01/01/2015"
+                android:weekSeparatorLineColor="#f2f2f2" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/richeng_List"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
