--- a/Myassistant/app/src/main/res/layout/fragment1_richenglist_item.xml
+++ b/Myassistant/app/src/main/res/layout/fragment1_richenglist_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="vertical"
@@ -60,6 +60,12 @@
                 android:textColor="#9f9f9f"
                 android:textSize="14sp"
                 android:text="颐和园" />
+
+            <TextView
+                android:id="@+id/eventId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
         </LinearLayout>
     </LinearLayout>
 
