--- a/Myassistant/app/src/main/res/layout/activity_main.xml
+++ b/Myassistant/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zucc.hpy31501365gbl31501364.MainActivity"
-    android:orientation="vertical"
-    android:label="@string/help"
-    >
+    android:orientation="vertical">
+
+    <include layout="@layout/title_bar"></include>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/mViewPager"
