--- a/Myassistant/app/src/main/res/layout/activity_edit_event.xml
+++ b/Myassistant/app/src/main/res/layout/activity_edit_event.xml
@@ -241,6 +241,22 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/delete"
+                    android:layout_width="330dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:background="@color/colorAccent"
+                    android:text="删除"
+                    android:textColor="@android:color/background_light" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
