--- a/Myassistant/app/src/main/res/layout/logon.xml
+++ b/Myassistant/app/src/main/res/layout/logon.xml
@@ -8,6 +8,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal"></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="180dp"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="8dp"
