--- a/Myassistant/app/src/main/res/layout/activity_edit_event.xml
+++ b/Myassistant/app/src/main/res/layout/activity_edit_event.xml
@@ -159,11 +159,11 @@
 
                 <RatingBar
                     android:id="@+id/rating"
-                    android:layout_width="330dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_gravity="center_horizontal"
-                    />
+                    android:layout_weight="1"
+                    android:numStars="6" />
 
             </LinearLayout>
 
