--- a/Myassistant/app/src/main/res/layout/activity_select_event_adapter.xml
+++ b/Myassistant/app/src/main/res/layout/activity_select_event_adapter.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/touch_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +59,7 @@
 
             <TextView
                 android:id="@+id/data"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
@@ -67,7 +68,7 @@
 
             <TextView
                 android:id="@+id/startTime"
-                android:layout_width="30dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:text="19:30"
@@ -82,24 +83,11 @@
 
             <TextView
                 android:id="@+id/endTime"
-                android:layout_width="30dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
                 android:lines="1"
                 android:text="21:30"
-                android:textColor="#9f9f9f"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/place"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="16dp"
-                android:ellipsize="end"
-                android:lines="1"
-                android:text="颐和园"
                 android:textColor="#9f9f9f"
                 android:textSize="14sp" />
 
@@ -109,6 +97,21 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/place"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="颐和园"
+                android:textColor="#9f9f9f"
+                android:textSize="14sp" />
         </LinearLayout>
 
     </LinearLayout>
