--- a/Myassistant/app/src/main/res/values/colors.xml
+++ b/Myassistant/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
+    <color name="light_grey">#D7D7D7</color>
+    <color name="white">#FFFFFF</color>
 </resources>
