--- a/Myassistant/app/src/main/res/layout/activity_edit_event.xml
+++ b/Myassistant/app/src/main/res/layout/activity_edit_event.xml
@@ -10,17 +10,12 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
+            android:layout_margin="16dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:orientation="horizontal">
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,7 +34,7 @@
 
                 <EditText
                     android:id="@+id/title"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
@@ -64,7 +59,7 @@
 
                 <Spinner
                     android:id="@+id/type"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_gravity="center_horizontal"
@@ -85,7 +80,7 @@
 
                 <EditText
                     android:id="@+id/data"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
@@ -180,7 +175,7 @@
 
                 <EditText
                     android:id="@+id/where"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -204,7 +199,7 @@
 
                 <EditText
                     android:id="@+id/remark"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -228,7 +223,7 @@
 
                 <EditText
                     android:id="@+id/talk"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -244,10 +239,11 @@
 
                 <Button
                     android:id="@+id/delete"
-                    android:layout_width="330dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1"
+                    android:layout_marginTop="16dp"
                     android:background="@color/colorAccent"
                     android:text="删除"
                     android:textColor="@android:color/background_light" />
